# actix-erp

./: . dockerignore  .http  Cargo.toml  Dockerfile  README.md  README.txt
.github/workflows/: docker-build.yml
src/: commons.rs  main.rs
src/controller/: mod.rs  people_controller.rs
src/model/: mod.rs  people_model.rs
src/repository/: db.rs  mod.rs  mongodb_db.rs  people_mongodb_repository.rs  people_repository.rs  people_surrealdb_repository.rs
src/routes/: mod.rs  people_routes.rs
src/service/: mod.rs  people_service.rs
