[package]
name = "actix-erp"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
surrealdb = "3.1.2"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
